--- a/index.html
+++ b/index.html
@@ -28,5 +28,181 @@
                   <button id="btn-login">Login</button>
             </div>
       </header>
+      <main>
+            <div id="face-map">
+                  <h2>Facebook helps you connect and share with <br> the people in your life.</h2>
+                  <img src="../facebook/mapa_facebook.png" alt="mapa">
+            </div>
+            <div id="inputs-signup">
+                  <h2>Sign Up</h2>
+                  <h3>It's free and anyone can join</h3>
+                  <div id="inputs-area">
+                        <div id="labels">
+                              <label for="">Full Name:</label>
+                              <label for="">Your Email:</label>
+                              <label for="">New Password:</label>
+                              <label for="">I am:</label>
+                              <label for="">Birthdate:</label>
+                        </div>
+                        <div id="inputs">
+                              <input type="text">
+                              <input type="text">
+                              <input type="text">
+                              <select name="" id="">
+                                    <option class="select" value="">Man</option>
+                                    <option class="select" value="">Woman</option>
+                              </select>
+                              <div id="birthdate">
+                                    <select name="" id="">
+                                          <option value="">January</option>
+                                          <option value="">February</option>
+                                          <option value="">March</option>
+                                          <option value="">April</option>
+                                          <option value="">May</option>
+                                          <option value="">June</option>
+                                          <option value="">July</option>
+                                          <option value="">August</option>
+                                          <option value="">September</option>
+                                          <option value="">October</option>
+                                          <option value="">November</option>
+                                          <option value="">December</option>
+                                    </select>
+                                    <select name="" id="">
+                                          <option value="">1</option>
+                                          <option value="">2</option>
+                                          <option value="">3</option>
+                                          <option value="">4</option>
+                                          <option value="">5</option>
+                                          <option value="">6</option>
+                                          <option value="">7</option>
+                                          <option value="">8</option>
+                                          <option value="">9</option>
+                                          <option value="">10</option>
+                                          <option value="">11</option>
+                                          <option value="">12</option>
+                                          <option value="">13</option>
+                                          <option value="">14</option>
+                                          <option value="">15</option>
+                                          <option value="">16</option>
+                                          <option value="">17</option>
+                                          <option value="">18</option>
+                                          <option value="">19</option>
+                                          <option value="">20</option>
+                                          <option value="">21</option>
+                                          <option value="">22</option>
+                                          <option value="">23</option>
+                                          <option value="">24</option>
+                                          <option value="">25</option>
+                                          <option value="">26</option>
+                                          <option value="">27</option>
+                                          <option value="">28</option>
+                                          <option value="">29</option>
+                                          <option value="">30</option>
+                                          <option value="">31</option>
+                                    </select>
+                                    <select name="" id="">
+                                          <option value="">2011</option>
+                                          <option value="">2010</option>
+                                          <option value="">2009</option>
+                                          <option value="">2008</option>
+                                          <option value="">2007</option>
+                                          <option value="">2006</option>
+                                          <option value="">2005</option>
+                                          <option value="">2004</option>
+                                          <option value="">2003</option>
+                                          <option value="">2002</option>
+                                          <option value="">2001</option>
+                                          <option value="">2000</option>
+                                          <option value="">1999</option>
+                                          <option value="">1998</option>
+                                          <option value="">1997</option>
+                                          <option value="">1996</option>
+                                          <option value="">1995</option>
+                                          <option value="">1994</option>
+                                          <option value="">1993</option>
+                                          <option value="">1992</option>
+                                          <option value="">1991</option>
+                                          <option value="">1990</option>
+                                          <option value="">1989</option>
+                                          <option value="">1988</option>
+                                          <option value="">1987</option>
+                                          <option value="">1986</option>
+                                          <option value="">1985</option>
+                                          <option value="">1984</option>
+                                          <option value="">1983</option>
+                                          <option value="">1982</option>
+                                          <option value="">1981</option>
+                                          <option value="">1980</option>
+                                          <option value="">1979</option>
+                                          <option value="">1978</option>
+                                          <option value="">1977</option>
+                                          <option value="">1976</option>
+                                          <option value="">1975</option>
+                                          <option value="">1974</option>
+                                          <option value="">1973</option>
+                                          <option value="">1972</option>
+                                          <option value="">1971</option>
+                                          <option value="">1970</option>
+                                          <option value="">1969</option>
+                                          <option value="">1968</option>
+                                          <option value="">1967</option>
+                                          <option value="">1966</option>
+                                          <option value="">1965</option>
+                                          <option value="">1964</option>
+                                          <option value="">1963</option>
+                                          <option value="">1962</option>
+                                          <option value="">1961</option>
+                                          <option value="">1960</option>
+                                          <option value="">1959</option>
+                                          <option value="">1958</option>
+                                          <option value="">1957</option>
+                                          <option value="">1956</option>
+                                          <option value="">1955</option>
+                                          <option value="">1954</option>
+                                          <option value="">1953</option>
+                                          <option value="">1952</option>
+                                          <option value="">1951</option>
+                                          <option value="">1950</option>
+                                          <option value="">1949</option>
+                                          <option value="">1948</option>
+                                          <option value="">1947</option>
+                                          <option value="">1946</option>
+                                          <option value="">1945</option>
+                                          <option value="">1944</option>
+                                          <option value="">1943</option>
+                                          <option value="">1942</option>
+                                          <option value="">1941</option>
+                                          <option value="">1940</option>
+                                          <option value="">1939</option>
+                                          <option value="">1938</option>
+                                          <option value="">1937</option>
+                                          <option value="">1936</option>
+                                          <option value="">1935</option>
+                                          <option value="">1934</option>
+                                          <option value="">1933</option>
+                                          <option value="">1932</option>
+                                          <option value="">1931</option>
+                                          <option value="">1930</option>
+                                          <option value="">1929</option>
+                                          <option value="">1928</option>
+                                          <option value="">1927</option>
+                                          <option value="">1926</option>
+                                          <option value="">1925</option>
+                                          <option value="">1924</option>
+                                          <option value="">1923</option>
+                                    </select>
+                              </div>
+                              <div id="other-options">
+                                    <a id="why" href="#">Why do I need to provide this?</a>
+                                    <button id="btn-signup">Sign Up</button>
+                                    <p id="terms">
+                                          By clicking Sign Up, you are indicating that you have read and agree to the
+                                          <a href="#">Terms and Use</a> and <a href="#">Privacy Policy.</a>
+                                    </p>
+                              </div>
+                        </div>
+                  </div>
+            </div>
+      </main>
 </body>
 </html>
