Por último le colocamos el footer co sus respectivos elementos hijos acomodados con respecto al diseño original

--- a/index.html
+++ b/index.html
@@ -204,5 +204,20 @@
                   </div>
             </div>
       </main>
+      <footer>
+            <div id="copyright">
+                  <p>Facebook © 2008</p>
+            </div>
+            <div id="more-options">
+                  <a href="#">About</a>
+                  <a href="#">Advertising</a>
+                  <a href="#">Developers</a>
+                  <a href="#">Jobs</a>
+                  <a href="#">Terms</a>
+                  <a href="#">Find Friends</a>
+                  <a href="#">Privacy</a>
+                  <a href="#">Help</a>
+            </div>
+      </footer>
 </body>
 </html>
